--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "youtube-downloader",
   "version": "1.0.0",
+  "description": "JUDE'S TECH VERSE MP3/MP4 Downloader",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "@distube/ytdl-core": "^1.0.6",
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "yt-search": "^2.10.6"
   }
 }
