--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@distube/ytdl-core": "^1.0.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "yt-search": "^2.10.6"
+    "ytdl-core": "^4.11.4",
+    "ytsr": "^3.8.4"
   }
 }
